[package]
name = "pre-commit-hooks"
version = "0.3.0"
authors = ["Joe Grund <grundjoseph@gmail.com>", "Seto Elkahfi <setoelkahfi@gmail.com>"]
build = "build.rs"
description = "Reads hooks metadata from Cargo.toml and executes on commit. Works with workspace format."
license = "MIT"
repository = "https://github.com/nentgroup/pre-commit-hooks"
readme = "README.md"

[package.metadata.precommit]
# Add your pre-commit configuration here.
# This section is needed when using this pre-commit-hooks.

[build-dependencies]
toml = "0.7"
